--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "amakids_test",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
